# h-perforatum-network-tox-release

./: .gitattributes  .gitignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG_AUDIT_FIXES.md  CITATION.cff  CLAIM_AUDIT.md  DATA_MANIFEST.md  DATA_PROVENANCE.md  FIGURES.md  GUNEY_FIDELITY_REVALIDATION.md  GUNEY_FIDELITY_check.py  LICENSE  LICENSE-CC-BY-4.0  LITERATURE_AUDIT.md  NARRATIVE_AUDIT.md  README.md  REPRODUCIBILITY_AUDIT.md  RESPONSE_TO_REVIEWERS.md  REVIEWER_EVIDENCE.py  REVIEWER_EVIDENCE_leakage_scaling.py  environment.yml  pyproject.toml  reproducibility.lock.yml  requirements-lock.txt  requirements.txt  setup.py  verify_numbers.py
.github/: GITHUB_SETTINGS.md  PULL_REQUEST_TEMPLATE.md
R/: 00_setup_pub.R  01_load_data.R  fig1_lollipop.R  fig2_dumbbell.R  fig3_ewi_waterfall.R  fig4_ptni_phase.R  fig5_bootstrap.R  fig6_chemsim.R  fig7_leakage.R  fig8_opregime.R
data/: CHECKSUMS.sha256
docs/: DATA_FLOW.md
manuscript/: cover_letter.tex  main.bbl  main.tex  main_anonymous.bbl  main_anonymous.tex  references.bib  references_extra.bib  supplementary.bbl  supplementary.tex
results/: bootstrap_sensitivity.csv  chemical_similarity_control.csv  leakage_null_distributions.csv
scripts/: audit_statistical_conventions.py  build_submission_archives.py  build_zenodo_snapshot.py  check_submission_archive.py  consolidate_results.py  create_lcc_filtered_data.py  curate_targets.py  extract_string_network.py  filter_liver_network.py  generate_dataflow.py  generate_descriptive_supp.py  generate_leakage_figure_data.py  regenerate_dili.py  regenerate_targets.py  run_pipeline.py  (+12 more)
(+128 files in other folders)
