[project]
name = "h-perforatum-network-tox"
version = "2.1.0"
description = "Network-proximity analysis of effect size versus statistical evidence under target-count asymmetry (H. perforatum constituents; DILI module)"
authors = [
    { name = "Antony Bevan" }
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "pyarrow>=12.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "requests>=2.28.0",
    "rdkit>=2023.3.1",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
    "B",   # bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
